2011-03-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/main.c:
   Make --ft-names list filetypes alphabetically.


2011-03-20  Colomban Wendling  <colomban(at)geany(dot)org>

 * data/filetypes.*, doc/geany.txt, doc/geany.html, src/callbacks.c,
   src/filetypes.c, src/filetypes.h, src/templates.c:
   Add new filetype setting "comment_single" to provide separated
   single-line and multiline comment support. Single-line are used in
   priority to comment code, and multiline to make template comments.
 * src/editor.c, src/search.c, tagmanager/diff.c:
   Don't use strlen(..) > 0 or == 0, simply check the first character
   against 0.
 * src/document.c:
   Update forced indent settings when setting the filetype. This makes
   documents created or set to a filetype with forced indent setting
   (Makefile, F77) to have the correct setting right away.


2011-03-19  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/callbacks.c:
   Create a new undo action when inserting templates, making sure the user
   can undo the template insertion without also undoing a previous action.


2011-03-18  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/document.c, src/encodings.c, src/encodings.h:
   Move document encoding conversion with BOM support to encodings.[ch] as
   encodings_convert_to_utf8_auto().
 * src/templates.c:
   Properly convert template files to UTF-8 on loading, fixing encoding
   issues if templates files are not encoded in UTF-8.


2011-03-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/templates/files/main.vala:
   Add file template for Vala (patch by Mark Trompell, thanks).


2011-03-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/utils.h, src/filetypes.c:
   Support copying filetype definition file group keys from a system
   keyfile with e.g. [styling=C].
   Add function utils_make_filename() for building filenames easily.
 * THANKS, plugins/classbuilder.c: